@@ -33,7 +33,7 @@ check_PROGRAMS = tversion tabort_prec_max tassert tabort_defalloc1      \
      tl2b tlgamma tli2 tlngamma tlog tlog10 tlog1p tlog2 tmin_prec	\
      tminmax tmodf tmul tmul_2exp tmul_d tmul_ui tnext			\
      tout_str toutimpl tpow tpow3 tpow_all tpow_z tprintf		\
-     trandom trec_sqrt tremquo trint troot tround_prec tsec		\
+     trandom trec_sqrt tremquo trint trndna troot tround_prec tsec	\
      tsech tset_d tset_f tset_float128 tset_ld tset_q tset_si tset_sj	\
      tset_str tset_z tset_z_exp tsi_op tsin tsin_cos tsinh		\
      tsinh_cosh tsprintf tsqr tsqrt tsqrt_ui tstckintc tstdint tstrtofr	\
